销毁阶段函数

--- a/demo9.html
+++ b/demo9.html
@@ -2,7 +2,7 @@
 <html lang="zh-cn">
 <head>
     <meta charset="UTF-8">
-    <title>运行中阶段函数</title>
+    <title>销毁阶段函数</title>
     <script src="bower_components/react/react.min.js"></script>
     <script src ="bower_components/react/JSXTransformer.js"></script>
     <style>
